# 3D_scanning_with_regrasping

./: .gitignore  README.md
scanning/: .CMakeLists.txt.swp  CMakeLists.txt  package.xml
scanning/launch/: baxter_left_hand_track.launch  full_test_ar.launch  scan.launch  test_ar.launch
scanning/point_clouds/: .62d5a19cf87f0b91316281d946e573b4631a1670.cam
scanning/scripts/: capture_pointcloud.py  full_pipeline.py  kin_func_skeleton.py  next_best_view.py  next_best_view_not_demo.py  smooth_obj.py  visualize_obj.py
scanning/src/: .realsense_post_process.cpp.swp  aligner.cpp  background_removal.cpp  generate_mesh.cpp  grasp_metrics.py  main.py  obj2pcd.cpp  object_pose_publisher.py  point_cloud_cleaner.cpp  policies.py  processing_pipeline.cpp  realsense_post_process.cpp  record_one_point_cloud.cpp  registration.cpp  template_alignment.cpp  utils.py  visualize_pcd.cpp
scanning/src/point clouds/filtered/: pawn_filtered.pcd  pawn_filtered_2.pcd  table_filtered.pcd  table_filtered_2.pcd
scanning/src/point clouds/ros/: ros_pawn.pcd  ros_table.pcd
scanning/src/point_cloud_cleaner/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  point_cloud_cleaner.cpp
scanning/src/stupid_removal/: CMakeLists.txt  stupid_removal.cpp
scanning/src/trianglizer/: CMakeLists.txt
