cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
set(CMAKE_C_COMPILER "/usr/bin/gcc")
set(CMAKE_CXX_COMPILER "/usr/bin/g++")
project(point_cloud_cleaner)
#find_package(PCL 1.3 REQUIRED COMPONENTS common io filters visualization)
find_package(PCL 1.3 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(point_cloud_cleaner point_cloud_cleaner.cpp)
target_link_libraries(point_cloud_cleaner ${PCL_LIBRARIES})
