cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
set(CMAKE_C_COMPILER "/usr/bin/gcc")
set(CMAKE_CXX_COMPILER "/usr/bin/g++")
project(stupid_removal)
find_package(PCL 1.3 REQUIRED COMPONENTS common io visualization filters)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(stupid_removal stupid_removal.cpp)
target_link_libraries(stupid_removal ${PCL_LIBRARIES})
