cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
set(CMAKE_C_COMPILER "/usr/bin/gcc")
set(CMAKE_CXX_COMPILER "/usr/bin/g++")
project(trianglizer)
find_package(PCL 1.3 REQUIRED COMPONENTS common io visualization kdtree features surface)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(trianglizer trianglizer.cpp)
target_link_libraries(trianglizer ${PCL_LIBRARIES})
